Update on class image2 to likemeat index.html

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
         <div class="deals">
             <img class="img1" src="abhishek-hajare-kkrXVKK-jhg-unsplash-removebg-preview.png"alt="picture">
-            <img class="img2" src="likemeat-73_obA0IB_0-unsplash-removebg-preview.png"alt="picture">
+            <img class="likemeat" src="likemeat-73_obA0IB_0-unsplash-removebg-preview.png"alt="picture">
             
             <h2><span class="hot">Hot</span><span class="dean"> Deals</span> </h2>
             <h1>SPECIAL COMBO PACK</h1>
